Fix: Comment Styling, Bookmarks render

--- a/src/component/footer/_Footer.scss
+++ b/src/component/footer/_Footer.scss
@@ -24,7 +24,7 @@
       margin: 10px;
       display: inherit;
       flex-direction: row;
-      border: 2px dashed var(--color-border-darker);
+      border: 2px dashed var(--color-border-white);
       border-radius: 15px;
     }
 
