--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 
 :root {
   --color-border-default: #{$color-border-default};
+  --color-border-white: #{$color-border-white};
   --color-border-darker: #{$color-border-darker};
   --color-text-white: #{$color-text-white};
   --color-text-black: #{$color-text-black};
