--- a/src/page/main/Search/Keyword-selector/_KeywordSelector.scss
+++ b/src/page/main/Search/Keyword-selector/_KeywordSelector.scss
@@ -36,11 +36,19 @@
         &.active {
           background-color: $color-warning;
         }
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
       .keywords {
         &.active {
           background-color: $color-selected;
+        }
+
+        &:hover {
+          cursor: pointer;
         }
       }
 
