--- a/src/common/_ColorScheme.scss
+++ b/src/common/_ColorScheme.scss
@@ -19,6 +19,7 @@ $color-not-selected: #1a0049;
 
 // border
 $color-border-default: #000;
+$color-border-white: #fff;
 $color-border-darker: #444;
 
 // text
