--- a/src/component/lecture-popup/_LecturePopup.scss
+++ b/src/component/lecture-popup/_LecturePopup.scss
@@ -14,9 +14,40 @@
 
   overflow-y: hidden;
 
-  .lecturePopup--lecture {
+  &--lecture {
+    display: flex;
+    flex-direction: column;
     overflow-y: scroll;
     padding: 2% 5%;
     height: 100%;
+
+    font-size: 2rem;
+
+    .lectureCard-separator {
+      // width: 100%;
+      height: 1px;
+      margin: 3% auto;
+      background-color: #000;
+    }
+
+    .lectureCard-grid--first-row {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+
+    .lectureCard-grid--cl1,
+    .lectureCard-grid--cl2,
+    .lectureCard-grid--cl3 {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;      
+
+      margin-right: 10px;
+
+      i {
+        width: 35px;
+      }
+    }
   }
 }
